# ThreadLoop

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  release-please-config.json  system_design.md
.github/: PULL_REQUEST_TEMPLATE.md  branch-protection.md  release-please-app-setup.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_refresh_tokens.py
backend/app/: config.py  db.py  main.py
backend/app/auth/: apple.py  deps.py  facebook.py  google.py  link.py  schemas.py  session.py
backend/app/models/: __init__.py  listing.py  refresh_token.py  transaction.py  user.py
backend/app/routers/: auth.py  health.py  users.py
backend/tests/: conftest.py  test_config.py  test_health.py  test_refresh_token_model.py  test_refresh_tokens_migration.py  test_root.py
backend/tests/auth/: _test_settings.py  conftest.py  test_apple_callback_integration.py  test_apple_client_secret.py  test_apple_verifier.py  test_facebook_callback_integration.py  test_facebook_verifier.py  test_google_callback_integration.py  test_google_verifier.py  test_link_tokens.py  test_logout_route.py  test_make_test_settings.py  test_me_route.py  test_per_provider_gating_integration.py  test_refresh_route.py  test_require_user.py  test_schemas_invariants.py  test_session_helpers.py  test_slice_1_demo.py
docs/: README.md  architecture.md  assets.md  auth.md  contributing.md  development-cycle.md  devops-roadmap.md  search.md  (+1 more)
(+83 files in other folders)
